Ok THIS is the dual scrollbar fix

--- a/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
+++ b/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
@@ -1,6 +1,6 @@
 .device-settings {
   .results-dropdown {
-    overflow-y: hidden;
+    overflow-y: unset;
     position: relative;
   }
 }
